Devops/Kubernetes/k8-29-08-2026/axion-ui/manifest/ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-service
  namespace: mkdspace
  labels:
    app: ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
      - name: ui
        image: axionacr2.azurecr.io/ui-service:v1
        ports:
        - containerPort: 80
