Devops/Kubernetes/k8-29-08-2026/axion-ui/manifest/ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  namespace: mkdspace
spec:
  type: ClusterIP
  selector:
    app: ui
  ports:
    - port: 80
      targetPort: 80
